{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 60,
  "lineage": "1586cf75-16b8-e9d3-c069-a1e299683991",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:974698673840:loadbalancer/terraform-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 30,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-elb-1656978827.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8888/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb",
            "idle_timeout": 30,
            "instances": [
              "i-057affa5a651cb1ce",
              "i-0f604f641cf0ae20a"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8888,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              },
              {
                "instance_port": 8888,
                "instance_protocol": "http",
                "lb_port": 8888,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb",
            "security_groups": [
              "sg-06f9153f6ab6c5f35"
            ],
            "source_security_group": "974698673840/elb",
            "source_security_group_id": "sg-06f9153f6ab6c5f35",
            "subnets": [
              "subnet-032e835e9f55caac1",
              "subnet-09d432746783cc763",
              "subnet-0e710ffbf1eef9a70"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "tags_all": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.s3roacess_iam",
            "aws_instance.web-1",
            "aws_instance.web-2",
            "aws_security_group.elb",
            "aws_security_group.web",
            "aws_subnet.aws-1-subnet-private",
            "aws_subnet.aws-2-subnet-private",
            "aws_subnet.aws-3-subnet-public",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ssh_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c46192d65be87c42",
            "arn": "arn:aws:ec2:us-east-1:974698673840:instance/i-02410db1374fa66e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02410db1374fa66e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lastkeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3a44179c92c58a5",
            "private_dns": "ip-172-20-0-109.ec2.internal",
            "private_ip": "172.20.0.109",
            "public_dns": "ec2-54-174-82-67.compute-1.amazonaws.com",
            "public_ip": "54.174.82.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040cee61962ebeb5d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c15e1b28f60e59ec",
            "tags": {
              "Description": "SSH Proxy to VPCs",
              "Name": "SSH-Proxy",
              "enviroment": "learning",
              "owner": "I.M. gostik",
              "project": "devops school"
            },
            "tags_all": {
              "Description": "SSH Proxy to VPCs",
              "Name": "SSH-Proxy",
              "enviroment": "learning",
              "owner": "I.M. gostik",
              "project": "devops school"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c27a6b27c26e2ae"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_proxy",
            "aws_subnet.aws-1-subnet-public",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c46192d65be87c42",
            "arn": "arn:aws:ec2:us-east-1:974698673840:instance/i-0f604f641cf0ae20a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_iam_acess",
            "id": "i-0f604f641cf0ae20a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lastkeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-05b86e432590b9a1e",
            "private_dns": "ip-172-20-1-154.ec2.internal",
            "private_ip": "172.20.1.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cfd2ec21ef305ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e710ffbf1eef9a70",
            "tags": {
              "Description": "Backend server",
              "Name": "Nginx 1",
              "enviroment": "learning",
              "owner": "Konstantin",
              "project": "devops school"
            },
            "tags_all": {
              "Description": "Backend server",
              "Name": "Nginx 1",
              "enviroment": "learning",
              "owner": "Konstantin",
              "project": "devops school"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f705c95715064053"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3roacess_iam",
            "aws_security_group.web",
            "aws_subnet.aws-1-subnet-private",
            "aws_vpc.IS_VPC1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c46192d65be87c42",
            "arn": "arn:aws:ec2:us-east-1:974698673840:instance/i-057affa5a651cb1ce",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_iam_acess",
            "id": "i-057affa5a651cb1ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lastkeys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0241286031a98efe8",
            "private_dns": "ip-172-20-5-113.ec2.internal",
            "private_ip": "172.20.5.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04710e70b0a7130e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-032e835e9f55caac1",
            "tags": {
              "Description": "Backend server",
              "Name": "Nginx 2",
              "owner": "Konstantin",
              "project": "devops school"
            },
            "tags_all": {
              "Description": "Backend server",
              "Name": "Nginx 2",
              "owner": "Konstantin",
              "project": "devops school"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f705c95715064053"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3roacess_iam",
            "aws_security_group.web",
            "aws_subnet.aws-2-subnet-private",
            "aws_vpc.IS_VPC1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:internet-gateway/igw-0b58e7833d0f56c1e",
            "id": "igw-0b58e7833d0f56c1e",
            "owner_id": "974698673840",
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:internet-gateway/igw-029881c78886a0296",
            "id": "igw-029881c78886a0296",
            "owner_id": "974698673840",
            "vpc_id": "vpc-0510d74a072ec6913"
          },
          "dependencies": [
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b58e7833d0f56c1e",
            "id": "r-rtb-01b0f71308be5b8011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b0f71308be5b801",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway-1",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-029881c78886a0296",
            "id": "r-rtb-051e6aaab2b4f1ec11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051e6aaab2b4f1ec1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway-2",
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f790e4168ca2cc201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f790e4168ca2cc20",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-004d65a1ea492f3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private_route_table-1",
            "aws_vpc.IS_VPC1",
            "aws_vpc.IS_VPC2",
            "aws_vpc_peering_connection.VPCPeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06a8054739eef2ebe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06a8054739eef2ebe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-004d65a1ea492f3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IS_VPC2",
            "aws_vpc_peering_connection.VPCPeer",
            "aws_route_table.private_route_table-2",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:route-table/rtb-0f790e4168ca2cc20",
            "id": "rtb-0f790e4168ca2cc20",
            "owner_id": "974698673840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-004d65a1ea492f3b0"
              }
            ],
            "tags": {
              "Name": "Private route table"
            },
            "tags_all": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:route-table/rtb-06a8054739eef2ebe",
            "id": "rtb-06a8054739eef2ebe",
            "owner_id": "974698673840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-004d65a1ea492f3b0"
              }
            ],
            "tags": {
              "Name": "Private route table"
            },
            "tags_all": {
              "Name": "Private route table"
            },
            "vpc_id": "vpc-0510d74a072ec6913"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:route-table/rtb-0343aeb714be435f1",
            "id": "rtb-0343aeb714be435f1",
            "owner_id": "974698673840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b58e7833d0f56c1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table 1"
            },
            "tags_all": {
              "Name": "Public route table 1"
            },
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway-1",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:route-table/rtb-0c1f6c28c142e387e",
            "id": "rtb-0c1f6c28c142e387e",
            "owner_id": "974698673840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029881c78886a0296",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "vpc_id": "vpc-0510d74a072ec6913"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IS_VPC2",
            "aws_internet_gateway.gateway-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e4461738dc6c02d",
            "route_table_id": "rtb-0f790e4168ca2cc20",
            "subnet_id": "subnet-0e710ffbf1eef9a70"
          },
          "dependencies": [
            "aws_route_table.private_route_table-1",
            "aws_subnet.aws-1-subnet-private",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa979dabcdc013bf",
            "route_table_id": "rtb-0f790e4168ca2cc20",
            "subnet_id": "subnet-032e835e9f55caac1"
          },
          "dependencies": [
            "aws_route_table.private_route_table-1",
            "aws_subnet.aws-2-subnet-private",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07957a000df6904d6",
            "route_table_id": "rtb-06a8054739eef2ebe",
            "subnet_id": "subnet-0d789c9b012b3db95"
          },
          "dependencies": [
            "aws_route_table.private_route_table-2",
            "aws_subnet.aws-3-subnet-private",
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c732da5fbcba864c",
            "route_table_id": "rtb-01b0f71308be5b801",
            "subnet_id": "subnet-0c15e1b28f60e59ec"
          },
          "dependencies": [
            "aws_subnet.aws-1-subnet-public",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab10122e204ea94b",
            "route_table_id": "rtb-051e6aaab2b4f1ec1",
            "subnet_id": "subnet-0c86c78339d031180"
          },
          "dependencies": [
            "aws_subnet.aws-2-subnet-public",
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3ad499964a08c68",
            "route_table_id": "rtb-01b0f71308be5b801",
            "subnet_id": "subnet-09d432746783cc763"
          },
          "dependencies": [
            "aws_subnet.aws-3-subnet-public",
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:security-group/sg-06f9153f6ab6c5f35",
            "description": "Web backends security policies.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f9153f6ab6c5f35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "elb",
            "name_prefix": "",
            "owner_id": "974698673840",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:security-group/sg-08c27a6b27c26e2ae",
            "description": "Proxy scurity policies.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c27a6b27c26e2ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_proxy",
            "name_prefix": "",
            "owner_id": "974698673840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Security group for SSH proxy to VPC",
              "Name": "SshProxy"
            },
            "tags_all": {
              "Description": "Security group for SSH proxy to VPC",
              "Name": "SshProxy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:security-group/sg-0f705c95715064053",
            "description": "Web backends security policies.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "172.20.0.0/16",
                  "172.21.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.20.1.0/24",
                  "172.21.1.0/24",
                  "172.20.5.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f705c95715064053",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.0.0/16",
                  "172.21.0.0/16"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.20.0.0/16",
                  "172.21.0.0/16"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.20.0.0/16",
                  "172.21.0.0/16"
                ],
                "description": null,
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "172.20.1.0/24",
                  "172.20.5.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "974698673840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Security group for backends",
              "Name": "Nginx"
            },
            "tags_all": {
              "Description": "Security group for backends",
              "Name": "Nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-1-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:subnet/subnet-0e710ffbf1eef9a70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.1.0/24",
            "id": "subnet-0e710ffbf1eef9a70",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "974698673840",
            "tags": {
              "Name": "First Private subnet"
            },
            "tags_all": {
              "Name": "First Private subnet"
            },
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-1-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:subnet/subnet-0c15e1b28f60e59ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.0.0/24",
            "id": "subnet-0c15e1b28f60e59ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "974698673840",
            "tags": {
              "Name": "First public subnet"
            },
            "tags_all": {
              "Name": "First public subnet"
            },
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-2-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:subnet/subnet-032e835e9f55caac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.5.0/24",
            "id": "subnet-032e835e9f55caac1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "974698673840",
            "tags": {
              "Name": "Second Private subnet"
            },
            "tags_all": {
              "Name": "Second Private subnet"
            },
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-2-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:subnet/subnet-0c86c78339d031180",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.21.0.0/24",
            "id": "subnet-0c86c78339d031180",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "974698673840",
            "tags": {
              "Name": "Second public subnet"
            },
            "tags_all": {
              "Name": "Second public subnet"
            },
            "vpc_id": "vpc-0510d74a072ec6913"
          },
          "dependencies": [
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-3-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:subnet/subnet-0d789c9b012b3db95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.21.1.0/24",
            "id": "subnet-0d789c9b012b3db95",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "974698673840",
            "tags": {
              "Name": "Third Private subnet"
            },
            "tags_all": {
              "Name": "Third Private subnet"
            },
            "vpc_id": "vpc-0510d74a072ec6913"
          },
          "dependencies": [
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-3-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:subnet/subnet-09d432746783cc763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-09d432746783cc763",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "974698673840",
            "tags": {
              "Name": "First public subnet"
            },
            "tags_all": {
              "Name": "First public subnet"
            },
            "vpc_id": "vpc-0a86e135ab741733c"
          },
          "dependencies": [
            "aws_vpc.IS_VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "IS_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:vpc/vpc-0a86e135ab741733c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-01e9965e7c83489df",
            "default_route_table_id": "rtb-01b0f71308be5b801",
            "default_security_group_id": "sg-00b0b3c66adbaa36d",
            "dhcp_options_id": "dopt-06694521b72eb41c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a86e135ab741733c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01b0f71308be5b801",
            "owner_id": "974698673840",
            "tags": {
              "Description": "First VPC",
              "Environment": "Production",
              "Name": "VPC-1",
              "Owner": "gostik.prod@gmail.com"
            },
            "tags_all": {
              "Description": "First VPC",
              "Environment": "Production",
              "Name": "VPC-1",
              "Owner": "gostik.prod@gmail.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "IS_VPC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:974698673840:vpc/vpc-0510d74a072ec6913",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-040b842610258c892",
            "default_route_table_id": "rtb-051e6aaab2b4f1ec1",
            "default_security_group_id": "sg-06bb40a94a34b2c0c",
            "dhcp_options_id": "dopt-06694521b72eb41c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0510d74a072ec6913",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-051e6aaab2b4f1ec1",
            "owner_id": "974698673840",
            "tags": {
              "Description": "Second VPC",
              "Environment": "Production",
              "Name": "VPC-2",
              "Owner": "gostik.prod@gmail.com"
            },
            "tags_all": {
              "Description": "Second VPC",
              "Environment": "Production",
              "Name": "VPC-2",
              "Owner": "gostik.prod@gmail.com"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "VPCPeer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-004d65a1ea492f3b0",
            "peer_owner_id": "974698673840",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0a86e135ab741733c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "Peer Between 2 VPC's"
            },
            "tags_all": {
              "Name": "Peer Between 2 VPC's"
            },
            "vpc_id": "vpc-0510d74a072ec6913"
          },
          "dependencies": [
            "aws_vpc.IS_VPC1",
            "aws_vpc.IS_VPC2"
          ]
        }
      ]
    }
  ]
}